Migrate to JUnit5 - both in unit tests using jupiter engine and in story files using the custom jbehave engine.
Removed vintage engine (junit4), backwards incompatible change in health check steps since it leaked junit4 API, replaced with soft assertion.